--- a/references.bib
+++ b/references.bib
@@ -14,3 +14,93 @@
 Publisher: The Qualitative Report},
 	langid = {English}
 }
+
+@book{james2021,
+	title = {An Introduction to Statistical Learning: with Applications in R},
+	author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+	year = {2021},
+	date = {2021},
+	publisher = {Springer US},
+	series = {Springer Texts in Statistics},
+	doi = {10.1007/978-1-0716-1418-1},
+	url = {https://link.springer.com/10.1007/978-1-0716-1418-1},
+	note = {DOI: 10.1007/978-1-0716-1418-1},
+	address = {New York, NY},
+	langid = {en}
+}
+
+@article{lo2015,
+	title = {To transform or not to transform: using generalized linear mixed models to analyse reaction time data},
+	author = {Lo, Steson and Andrews, Sally},
+	year = {2015},
+	date = {2015},
+	journal = {Frontiers in Psychology},
+	volume = {6},
+	url = {https://www.frontiersin.org/articles/10.3389/fpsyg.2015.01171}
+}
+
+@article{box1976,
+	title = {Science and Statistics},
+	author = {Box, George E. P.},
+	year = {1976},
+	month = {12},
+	date = {1976-12-01},
+	journal = {Journal of the American Statistical Association},
+	pages = {791--799},
+	volume = {71},
+	number = {356},
+	doi = {10.1080/01621459.1976.10480949},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/01621459.1976.10480949},
+	note = {Publisher: Taylor & Francis
+{\_}eprint: https://www.tandfonline.com/doi/pdf/10.1080/01621459.1976.10480949}
+}
+
+@misc{lifeexp,
+	title = {Life Expectancy (WHO) Fixed},
+	url = {https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated},
+	langid = {en}
+}
+
+@article{steingrímsdóttir2012,
+	title = {Trends in life expectancy by education in Norway 1961{\textendash}2009},
+	author = {{Steingrímsdóttir}, {Ólöf Anna} and {Næss}, {Øyvind} and Moe, Joakim Oliu and {Grøholt}, Else-Karin and Thelle, Dag Steinar and Strand, {Bjørn Heine} and {Bævre}, {Kåre}},
+	year = {2012},
+	month = {03},
+	date = {2012-03-01},
+	journal = {European Journal of Epidemiology},
+	pages = {163--171},
+	volume = {27},
+	number = {3},
+	doi = {10.1007/s10654-012-9663-0},
+	url = {https://doi.org/10.1007/s10654-012-9663-0},
+	langid = {en}
+}
+
+@article{anassoc2018,
+	title = {An Association of Total Health Expenditure with GDP and Life Expectancy | Journal of Medical Research and Innovation},
+	year = {2018},
+	month = {07},
+	date = {2018-07-12},
+	url = {https://jmrionline.com/jmri/article/view/72},
+	langid = {en}
+}
+
+@misc{lifeexpa,
+	title = {Life Expectancy (WHO) Fixed},
+	author = {, Lasha},
+	url = {https://www.kaggle.com/datasets/lashagoch/life-expectancy-who-updated},
+	note = {titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:
+titleTranslation:},
+	langid = {en}
+}
